--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-      <a href="#" target="_blank"
+      <a href="https://twitter.com/FevenSeltene" target="_blank"
         ><img
           src="assets/icons/icons8-twitter-circled.gif"
           alt="Twitter"
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://www.instagram.com/dngleywahsey/" target="_blank"
         ><img
           src="assets/icons/icons8-instagram.gif"
           alt="Instagram"
@@ -251,7 +251,7 @@
           loading="lazy"
           class="socicon"
       /></a>
-      <a href="#" target="_blank"
+      <a href="https://github.com/Noahseltene/" target="_blank"
         ><img src="assets/icons/icons8-github.gif" alt="Github" class="socicon"
       /></a>
     </div>
