--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>FEVEN SELTENE</h1>
+      <h1 style="color: purple;">FEVEN SELTENE</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -55,7 +55,7 @@
         class="hero-img"
       />
       <div class="bio animate__animated animate__shakeX">
-        <h2 class="bio-title">About Me</h2>
+        <h2 class="bio-title" style="color: purple;">About Me</h2>
         <p class="bio-text">
           Full stack python develover proficient both in back-end and front-end development,
           working with frameworks django and flask. 
@@ -65,26 +65,21 @@
 
     <!-- More about -->
     <section class="more-about">
-      <h2>More About Me</h2>
+      <h2 style="color: purple;">More About Me</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
-        nesciunt excepturi quos obcaecati incidunt voluptatem ipsam sunt ipsum,
-        autem deleniti cupiditate molestias quis unde quae totam porro dicta
-        iure animi inventore, veniam hic! Omnis nulla, delectus a voluptatibus
+        Hello there! I'm a passionate Python developer with a deep-rooted love for crafting robust backend and full-stack solutions. If you're in search of a dedicated professional with a solid foundation in computer science and a knack for data structures, you've come to the right place.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur
-        nostrum dolor minus, libero delectus praesentium perferendis
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero,
-        consequuntur labore? Ea totam voluptas amet!
+        My journey in the world of programming began with a fascination for the elegance and precision of code. I quickly found my calling in Python, a language that marries simplicity with power.
+
+
+        At the heart of my expertise lies a mastery of data structures and foundational computer science concepts. These are the building blocks of every efficient, scalable, and reliable software system. Whether it's designing complex algorithms, optimizing databases, or architecting a seamless user experience, I approach every challenge with a keen understanding of the core principles that make software great.
       </p>
     </section>
 
     <!-- Skills section -->
     <section class="skills" id="skills">
-      <h2 class="skill-header">My Top Skills</h2>
+      <h2 class="skill-header" style="color: purple;">My Top Skills</h2>
 
       <div class="skills-wrapper">
         <div class="first-set animate__animated animate__pulse">
@@ -133,7 +128,7 @@
 
     <!-- Projects section -->
     <section class="projects" id="projects">
-      <h2 class="projects-title">Some of my Recent Projects</h2>
+      <h2 class="projects-title" style="color: purple;">Some of my Recent Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
           <img
@@ -179,7 +174,7 @@
 
     <!-- Contact section -->
     <section class="contact" id="contact">
-      <h2>Get In Touch With Me</h2>
+      <h2 style="color: purple;">Get In Touch With Me</h2>
       <div class="contact-form-container">
         <div class="contact-form">
           <form action="https://formspree.io/f/xyylnggw" method="POST">
