Change title color

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!--CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
 
     <!-- Favicons -->
     <link
@@ -111,7 +113,7 @@
             class="icon icon-card"
           />
           <img
-            src="assets/icons/icons8-react-native.svg"
+            src="assets/icons/icons8-python-48.png"
             alt=""
             loading="lazy"
             class="icon icon-card"
@@ -128,16 +130,18 @@
 
     <!-- Projects section -->
     <section class="projects" id="projects">
-      <h2 class="projects-title" style="color: purple;">Some of my Recent Projects</h2>
+      <h2 class="projects-title" style="color: purple;">Some Of My Recent Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
           <img
-            src="assets/images/expenseTracker.png"
+            src="assets/images/woman.jpg"
             alt="expense-tracker"
             loading="lazy"
             class="project-pic"
+            style="border-radius: 50%;  height: 150px !important;"
+
           />
-          <h3 class="project-title">Flask Blog </h3>
+          <h3 class="project-title" style="color: rgb(116, 36, 116);">Flask Blog </h3>
           <p class="project-details">
            This is a blog application built with Python, Flask
           </p>
@@ -145,29 +149,31 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/netflixClone.png"
+            src="assets/images/fyyur.jpg"
             alt="netflic-clone"
             loading="lazy"
             class="project-pic"
+            style="border-radius: 50%;  height: 150px !important;"
           />
-          <h3 class="project-title">Fyyur Project</h3>
+          <h3 class="project-title" style="color: rgb(116, 36, 116);">Fyyur Project</h3>
           <p class="project-details">
             This is an artist booking site that connects artists to different venues
           </p>
-          <a href="#" target="_blank" class="https://github.com/Noahseltene/flask_Bapp">Check it Out</a>
+          <a href="https://github.com/Noahseltene/fyyur" target="_blank" class="project-link">Check it Out</a>
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/greenyEarth.png"
+            src="assets/images/portfolio.jpg"
             alt="greeny-earth"
             loading="lazy"
             class="project-pic"
+            style="border-radius: 50%;  height: 150px !important;"
           />
-          <h3 class="project-title">Developer Portfolio</h3>
+          <h3 class="project-title" style="color: rgb(116, 36, 116);">Developer Portfolio</h3>
           <p class="project-details">
             This is a personal developer portfolio with the projects i have worked on
           </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <a href="https://github.com/Noahseltene/portfolio" target="_blank" class="project-link">Check it Out</a>
         </div>
       </div>
     </section>
@@ -271,6 +277,8 @@
     </footer>
 
     <!-- Website scripts -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="assets/js/app.js"></script>
 
     <!-- Ion icons scripts -->
